--- a/Goodwill-Application/Goodwill-Application/pom.xml
+++ b/Goodwill-Application/Goodwill-Application/pom.xml
@@ -8,15 +8,36 @@
 		<version>2.5.6</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>goodwill.donation.com</groupId>
-	<artifactId>Goodwill-Application</artifactId>
+<!--	<groupId>org.springframework.boot</groupId>-->
+<!--	<artifactId>spring-boot-maven-plugin</artifactId>-->
+<!--	<version>${project.parent.version}</version>-->
+
+		<groupId>org.websparrow</groupId>
+	<artifactId>spring-boot-qr-code</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Goodwill-Application</name>
+	<name>spring-boot-qr-code</name>
+
+<!--	<groupId>goodwill.donation.com</groupId>-->
+<!--	<artifactId>Goodwill-Application</artifactId>-->
+<!--	<version>0.0.1-SNAPSHOT</version>-->
+<!--	<name>Goodwill-Application</name>-->
+
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
+	<repositories>
+		<repository>
+			<id>jitpack.io</id>
+			<url>https://jitpack.io</url>
+		</repository>
+	</repositories>
 	<dependencies>
+		<dependency>
+			<groupId>com.github.kenglxn.qrgen</groupId>
+			<artifactId>javase</artifactId>
+			<version>2.6.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -25,7 +46,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
@@ -49,6 +69,11 @@
 			<groupId>com.google.zxing</groupId>
 			<artifactId>javase</artifactId>
 			<version>3.4.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+			<version>2.2.1.RELEASE</version>
 		</dependency>
 	</dependencies>
 
