--- a/Goodwill-Application/Goodwill-Application/src/main/resources/application.properties
+++ b/Goodwill-Application/Goodwill-Application/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-spring.thymeleaf.cache=false
-spring.thymeleaf.enabled=trueg
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
+#spring.thymeleaf.cache=false
+#spring.thymeleaf.enabled=trueg
+#spring.thymeleaf.prefix=classpath:/templates/
+#spring.thymeleaf.suffix=.html
 
 spring.h2.console.enabled=true
