--- a/Goodwill-Application/Goodwill-Application/pom.xml
+++ b/Goodwill-Application/Goodwill-Application/pom.xml
@@ -75,6 +75,12 @@
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 			<version>2.2.1.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+			<version>2.5.6</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
