--- a/Goodwill-Application/Goodwill-Application/src/main/resources/application.properties
+++ b/Goodwill-Application/Goodwill-Application/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port = 8081
+
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -8,9 +10,14 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring.thymeleaf.enabled=trueg
 #spring.thymeleaf.prefix=classpath:/templates/
 #spring.thymeleaf.suffix=.html
-<<<<<<< HEAD
-#
-=======
 
->>>>>>> 9b0724e9c956e7d1c30395331543fd1f55a9b6f4
 spring.h2.console.enabled=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=adonisac2002@gmail.com
+spring.mail.password=jhehjsdmgrqpoclc
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
